try to fix index translation

--- a/_posts/en/2025-11-20-test-post.md
+++ b/_posts/en/2025-11-20-test-post.md
@@ -4,8 +4,8 @@ title: "Multilingual Test Post"
 date: 2025-11-20 10:00:00 +0100
 lang: en
 translations:
-  zh: /zh/test-post.html
-  de: /de/test-post.html
+  zh: /zh/test-post/
+  de: /de/test-post/
 lang_ref: test-post    # 同一篇文章三个语言版本的“共同ID”
 permalink: /en/test-post/
 categories: [Test]
