--- a/_posts/de/2025-11-20-test-post.md
+++ b/_posts/de/2025-11-20-test-post.md
@@ -4,8 +4,8 @@ title: "Mehrsprachiger Testbeitrag"
 date: 2025-11-20 10:00:00 +0100
 lang: de
 translations:
-  zh: /zh/test-post.html
-  en: /en/test-post.html
+  zh: /zh/test-post/
+  en: /en/test-post/
 lang_ref: test-post
 permalink: /de/test-post/
 categories: [Test]
