--- a/_posts/zh/diary/2014-12-03-博客改版完成.md
+++ b/_posts/zh/diary/2014-12-03-博客改版完成.md
@@ -4,7 +4,7 @@ lang: zh
 title: "博客改版完成"
 date: "2014-12-03 15:30:47"
 slug: "e5-8d-9a-e5-ae-a2-e6-94-b9-e7-89-88-e5-ae-8c-e6-88-90"
-categories: ["心情日记"]
+categories: ["Diary"]
 tags: []
 ---
 改版完成  
