--- a/_posts/zh/diary/2015-12-03-公众号诞生.md
+++ b/_posts/zh/diary/2015-12-03-公众号诞生.md
@@ -4,7 +4,7 @@ lang: zh
 title: "公众号诞生"
 date: "2015-12-03 11:33:40"
 slug: "e5-85-ac-e4-bc-97-e5-8f-b7-e8-af-9e-e7-94-9f-e6-97-a5"
-categories: ["心情日记"]
+categories: ["Diary"]
 tags: ["公众号", "二维码"]
 ---
 2015年11月30日开通公众号零下十一度。
